refactor: refactor pom file ,  update spring ai libraries to 1.0.1 and enhnace the code